--- a/my-first-app/package.json
+++ b/my-first-app/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
     "jest-react-native": "^18.0.0",
     "react-test-renderer": "16.2.0"
   },
@@ -17,6 +21,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "eslint": "^4.17.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-elements": "^0.19.0",
