--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ my-first-app/node_modules
 my-first-app/ios/build
 my-first-app/android/app/build
 my-first-app/android/build
+my-first-app/android/.gradle
